--- a/environment.yml
+++ b/environment.yml
@@ -161,7 +161,6 @@ dependencies:
   - networkx=2.7.1=pyhd8ed1ab_0
   - nspr=4.32=h9c3ff4c_1
   - nss=3.74=hb5efdd6_0
-  - numpy=1.22.3=py39h18676bf_0
   - oauth2client=4.1.3=py_0
   - openjpeg=2.4.0=hb52868f_1
   - openssl=1.1.1l=h7f98852_0
@@ -263,3 +262,19 @@ dependencies:
   - zipp=3.7.0=pyhd8ed1ab_1
   - zlib=1.2.11=h36c2ea0_1013
   - zstd=1.5.2=ha95c52a_0
+  - pip:
+    - cloudpickle==2.0.0
+    - isv==0.3.14
+    - joblib==1.1.0
+    - llvmlite==0.38.0
+    - numba==0.55.1
+    - numpy==1.21.5
+    - plotly==5.6.0
+    - scikit-learn==1.0.2
+    - shap==0.40.0
+    - sklearn-json==0.1.0
+    - slicer==0.0.7
+    - tenacity==8.0.1
+    - threadpoolctl==3.1.0
+    - tqdm==4.63.0
+    - xgboost==1.5.2
