format plots according to guidelines + include plots and tables on github

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,6 @@
 *.Rhistory*
 *tests*
 
-plots/
-!plots/README.md
-!scripts/plots
-
-tables/
-!tables/README.md
-!scripts/tables
+/plots/old
 
 ClassifyCNV*
